# birl_baxter

./: .gitignore  CMakeLists.txt  README.md  birl-prereq.sh  package.xml
baxter_worlds/: CMakeLists.txt  package.xml
baxter_worlds/launch/: display_baxter.launch  display_baxter.launch~
baxter_worlds/rviz/: baxter_kinect.rviz  display_baxter.rviz
baxter_worlds/worlds/: pa_assembly.world
birl_demos/deep_grasping/baxterCode/: README.txt  getGripperMatrix.m  kinectRectToRobotGrasp3D.m
birl_demos/end_effector_teleoperation_control/: marker.rviz
birl_demos/end_effector_teleoperation_control/scripts/: #keyboard_control.py#
birl_demos/pa_demo/config/: goal_pose.yaml
birl_demos/pa_demo/launch/: pa.launch
birl_demos/pa_localization/scripts/: visual_localization.py  visual_localization2.py  visual_localization3.py
birl_demos/pivotApproach/pa_demo/: CMakeLists.txt
birl_demos/pivotApproach/pa_demo/bags/: .gitignore
birl_demos/pivotApproach/pa_demo/launch/: pa.launch
birl_demos/pivotApproach/pa_demo/scripts/pa_demo/: pa_jtc_tracIK.py  pa_manipulation.py
birl_examples/example_baxter_kinematics/: setup.py
birl_examples/example_baxter_kinematics/scripts/: fkine_DH.py  numIKin_Jac_wNullSpace.py  rrmc.py
birl_examples/example_camera_control/: CMakeLists.txt  setup.py
birl_examples/example_force_control/: setup.py
birl_examples/example_force_control/scripts/: force_moment_control.py
birl_examples/example_force_control/src/: PyKDL_package_overview.txt
birl_examples/example_gui/build-rqt_gui_test_001-Desktop_Qt_5_5_1_GCC_64bit-Debug/: moc_mainwindow.cpp
birl_examples/example_gui/example_button_gui/: setup.py
birl_examples/example_gui/example_gui1/: plugin.xml
birl_examples/example_gui/example_gui2/: CMakeLists.txt  package.xml
birl_examples/example_gui/example_gui_pub/: README.md  plugin.xml
birl_examples/example_gui/rqt_gui_test_001/: rqt_gui_test_001.pro
birl_examples/example_pcl/launch/: #freenect_pcl.launch#  freenect_pcl.launch  learnROS_06_voxel.launch  passthrough2.launch
birl_examples/example_pcl/rviz/: octree.rviz  pcl.rviz
birl_examples/example_pcl/src/: pcl_create.cpp  pcl_downsampling.cpp  pcl_matching.cpp  pcl_partitioning.cpp
birl_hands/: Readme
birl_recorded_motions/src/birl_recorded_motions/: shutdown.py
birl_worlds/: CMakeLists.txt  package.xml
birl_worlds/launch/: baxter_world.launch
birl_worlds/worlds/: beer_table.world  beer_table_v4.world  can.world  library.world  valve.world
controllers/force_controller/: #CMakeLists.txt#  CMakeLists.txt  package.xml
controllers/force_controller/cfg/: force_error_constants.cfg
controllers/force_controller/include/force_controller/: #controller.h#  controller.h  kinematics.h
controllers/force_controller/launch/: left_controller.launch  right_controller.launch  setPoint_publisher.launch
controllers/force_controller/src/: controller.cpp  force_contr_pubsub.cpp  force_control_client.cpp  kinematics.cpp  setPoint_publisher.cpp
controllers/force_controller/src/setPoint/: setPoint_publisher.cpp
controllers/position_controller/documentation/: ReadMe.txt
controllers/position_controller/launch/: position_controller.launch
controllers/position_controller/src/: initialPose.cpp
demos/: README
demos/09_BasketBallBalancing/dq_robotics/: CMakeLists.txt  package.xml
demos/10_DeepGrasping/baxterCode/: setupWideSearch.m
demos/End_Effector_Teleoperation_Control/: control_command_subscriber.py  end_effector_trajectory_client.py  keyboard_control.py
demos/End_Effector_Teleoperation_Control/scripts/: control_command_subscriber.py  end_effector_command_solver.py
demos/End_Effector_Teleoperation_Control/src/: end_effector_marker_control.cpp
demos/GreetDemo/: READ_ME
demos/deep_grasping/: readme.txt
demos/deep_grasping/baxterCode/: CalibrateKinect.m  CalibrateRobot.m  GraspFromImageThin.m  GraspFromImageWide.m  GraspFromKinectThin.m  GraspFromKinectWide.m  TakeBackgroundImage.m  depthPatchAroundP.m  goAndGrabIm.m  patchAveDepthAroundP.m  setup.m  setupThinSearch.m
demos/demos_sysu_baxter/: package.xml
demos/end_effector_teleoperation_control/: CMakeLists.txt  README.md  marker.rviz  package.xml
demos/end_effector_teleoperation_control/launch/: end_effector_marker_control.launch
demos/end_effector_teleoperation_control/scripts/: control_command_subscriber.py  end_effector_command_solver.py  end_effector_trajectory_client.py  ikfast_transform.py  (+1 more)
demos/face_tracker/: CMakeLists.txt  package.xml
demos/kinect_based_arm_tracking/: README
demos/ros_dqrobotics/: README  README~
demos/visual_servoing/: README  README.md  README~
documents/matlabBaxter/: baxter_model.m
examples/example_baxter_kinematics/: CMakeLists.txt  package.xml
examples/example_baxter_kinematics/scripts/: #numIKin_Jac_wNullSpace.py#  display_FKinIKin.py  example3_kdl.py  example_baxter_kinematics.py  example_kdl.py  numIKin_Jac_wNullSpace.py  rotation3_subscriber.py
examples/example_baxter_kinematics/src/: example2_kdl.cpp  example3_kdl.cpp  example_kdl.cpp
examples/example_camera_control/: package.xml
examples/example_force_control/: package.xml
examples/example_gui/: CMakeLists.txt  package.xml  setup.py
examples/example_gui/example_button_gui/: CMakeLists.txt  package.xml  plugin.xml
examples/example_minimal_nodes/: CMakeLists.txt  CMakeLists.txt~  package.xml
examples/example_moveit/: CMakeLists.txt  package.xml  setup.py
examples/example_moveit/planning/scripts/: #simple_getRobotState.py#  capdepuy_printState.py  move_group_python_interface_tutorial.py  simple_getRobotState.py  yoan_moveit.py
examples/example_moveit/scenes/: cafe_table.scene
examples/example_pcl/: CMakeLists.txt  README  package.xml
hands/pivotApproach_cameraXeff/: paHandControl.py
hands/snapCamera-DesignFiles/: femaleHolder.SLDPRT  maleHolder.SLDPRT
hands/snapCameraPart-HandDesignFiles/: read me.txt
recorded_motions/: CMakeLists.txt  package.xml  setup.py
recorded_motions/scripts/: example_goHome.py  example_goHomeLeft.py  example_goHomeRight.py  example_paHomePosition.py
(+158 files in other folders)
